feat : 쿼리를 한번으로 줄이기